# CS-446

./: .gitignore  ProjectPresentation.pptx  README.md  param.txt
ProjDyn/: README.md
ProjDyn/projdyn/: CMakeLists.txt  projdyn_common.h  projdyn_constraints.h  projdyn_tetgen.h
ProjDyn/projdyn_api/: CMakeLists.txt  projdyn_api.h
ProjDyn/shapeup/: CMakeLists.txt  shapeup_api.h
ProjDyn/simulation/: CMakeLists.txt
ProjDyn/viewer/: viewer.h
ShapeUp/: CMakeLists.txt  README.md
ShapeUp/projdyn/: point_explosion.h  projdyn.h  projdyn_constraints.h  projdyn_types.h
ShapeUp/projdyn_api/: projdyn_api.h  projdyn_widgets.h
ShapeUp/shapeup/: main.cpp  shapeup_api.h
ShapeUp/simulation/: main.cpp
ShapeUp/viewer/: CMakeLists.txt  viewer.h
